xsettings: unwatch dbus before destroying xsettings managers

fix possible race since notify_have_shell is getting called after the
managers are destroyed.

https://bugzilla.gnome.org/show_bug.cgi?id=711238